--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,2 @@
-Django==1.9.6
-pbr==1.10.0
-six==1.10.0
-South==1.0.2
-stevedore==1.13.0
-virtualenv==15.0.1
-virtualenv-clone==0.2.6
-virtualenvwrapper==4.7.1
+-f /usr/share/pip-wheels
+Django==1.9.7
